# install-test

./: CMakeLists.txt  build.bat  main.c
.github/workflows/: build.yml
